style: fix container component location

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root > .container-fluid{
-  padding-right: 0;
-  padding-left: 0;
+.container-fluid {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
 }
