feat: add projects data json

--- a/src/components/worksList/Work.css
+++ b/src/components/worksList/Work.css
@@ -1,3 +1,16 @@
 .works-list__card{
   max-width: 500px;
 }
+
+.works-list__card-button{
+  color: white !important;
+  font-size: 1.8rem;
+}
+
+.works-list__card-title{
+  font-size: 2rem;
+}
+
+.works-list__card-description{
+  font-size: 1.5rem;
+}
