--- a/src/components/worksList/Work.css
+++ b/src/components/worksList/Work.css
@@ -1,16 +1,33 @@
-.works-list__card{
+.works-list__card {
   max-width: 500px;
 }
 
-.works-list__card-button{
+.works-list__card-button {
   color: white !important;
+  background-color: #332ec3;
+  border-color: #332ec3;
   font-size: 1.8rem;
 }
 
-.works-list__card-title{
+.works-list__card-link {
+  font-size: 3rem;
+  position: absolute;
+  bottom: 1.25rem;
+  right: 1.25rem;
+}
+
+.works-list__card-title {
   font-size: 2rem;
 }
 
-.works-list__card-description{
+.works-list__card-description {
   font-size: 1.5rem;
+}
+
+.col-xl-4 {
+  margin-top: 20px;
+}
+
+.col-md-6 {
+  margin-top: 10px;
 }
