--- a/src/components/contacts/Contacts.css
+++ b/src/components/contacts/Contacts.css
@@ -1,5 +1,61 @@
-.contacts__image{
+.contacts{
+  
+}
+
+.contacts-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image{
   height: 240px;
-  margin-top: -8%;
-  width: 100%;
+  margin-top: -120px;
+}
+
+.info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.info-title-block{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 20px;
+}
+
+.info-title{
+  font-size: 3rem;
+}
+
+.description-block{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 30px 0;
+}
+
+.description-birthday{
+  font-size: 2rem;
+}
+
+.description-email{
+  font-size: 2rem;
+}
+
+.icons-block{
+  display: flex;
+}
+
+.icons-icon-circle{
+  display: flex;
+  margin: 10px;
+  justify-content: center;
+  align-items: center;
+  width: 4rem;
+  height: 4rem;
+  border-radius: 50%;
+  background-color: #e27c7a;
 }
