fix button bg color, error in firefox console

--- a/src/components/layouts/Header.css
+++ b/src/components/layouts/Header.css
@@ -36,6 +36,18 @@
   z-index: 1;
 }
 
+
+.cv-button:link{
+  background-color: #ff9593;
+}
 .cv-button:hover{
+  background-color: #ff9593 !important;
+}
+
+.cv-button:active{
+  background-color: #fc615f;
+}
+
+.cv-button:visited{
   background-color: #ff9593;
 }
